--- a/mens.html
+++ b/mens.html
@@ -41,8 +41,8 @@
 
 
 <tr><td class="year">2022</td>
- <td class="aus" data-player="rnadal">   <span class="total">21</span>Rafael Nadal   <span class="count">7span></td>
- <td class="fre" data-player="rnadal">   <span class="total">22</span>Rafael Nadal   <span class="count">14span></td>
+ <td class="aus" data-player="rnadal">   <span class="total">21</span>Rafael Nadal   <span class="count">7</span></td>
+ <td class="fre" data-player="rnadal">   <span class="total">22</span>Rafael Nadal   <span class="count">14</span></td>
  <td class="wim" data-player="ndjokovic"><span class="total">21</span>Novak Djokovic <span class="count">7</span></td>
  <td class="uso" data-player="calcaraz"> <span class="total">1 </span>Carlos Alcaraz <span class="count">1</span></td>
 </tr>
